<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="foodie_app">Foodie App</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="ice_cream_sundae">Ice cream sundae</string>
    <string name="address">135, Mall of India</string>
    <string name="reviews">522 reviews</string>
    <string name="time">1 Mar 2019 11:30 AM</string>
    <string name="price">Rs 180</string>
</resources>
