<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurants">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="398dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="421dp"

        android:scaleType="fitXY"
        app:srcCompat="@drawable/ice" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:text="Restaurants"
        android:textColor="#ffff"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="398dp"
        android:onClick="constraint"
        android:layout_height="233dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"

        android:scaleType="fitXY"
        app:srcCompat="@drawable/food" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ice_cream_sundae"
        android:layout_below="@+id/imageView"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="110dp"
        />

    <RatingBar
        android:id="@+id/ratingBar3"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView13"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:rating="3" />




    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ice_cream_sundae"
        android:layout_below="@+id/imageView2"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:layout_below="@+id/textView16"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="110dp"
        />

    <RatingBar
        android:id="@+id/ratingBar4"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView16"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:rating="3" />


</RelativeLayout>
</ScrollView>